# pico-usb2nes

./: CMakeLists.txt  README.md  pico-usb2nes.c
referencepcb/: README.md  pico-usb2nes_zero.kicad_pcb  pico-usb2nes_zero.kicad_prl  pico-usb2nes_zero.kicad_pro
